style/base/base.scss
/* ... */
.payment-icons {
    font-size: $font-size-large;
    text-wrap: nowrap;
    vertical-align: middle;
}

.s-logo {
    display: block;
    margin: 1.5em 0;
    & > img {
        max-width: 100%;
    }
}

@media (min-width: $screen-sm-min) {
    .s-logo {
        display: inline-block;
        margin: 0.8em 3ex;
    }
}

ul.status-list {
    list-style: none;
    margin: 0 0 1em 0;
    padding-left: 0;
    & > li {
        margin-bottom: 0.33em;
        padding-left: 4ex;
        position: relative;
        &::before {
            font-family: 'Glyphicons Halflings';
            left: 1ex;
            list-style: none;
            position: absolute;
        }
    }
}
ul.list-yes > li::before, ul.status-list > li.ok-success::before {
    color: $state-success-text;
    content: '\e013';
}
ul.status-list > li.ok-info::before {
    color: $state-info-text;
    content: '\e013';
}
ul.status-list > li.not-ok-warning::before {
    color: $state-warning-text;
    content: '\e013';
}
ul.list-no > li::before, ul.status-list > li.not-ok-danger::before {
    color: $state-danger-text;
    content: '\e014';
}

.text-info > a {
    text-decoration: underline;
}

.card.donation {
    margin: 5px 10px 10px 0;
    & > .recipient {
        display: flex;
        font-size: $font-size-large;
        font-weight: 500;
        max-width: 100%;
        & > .col-1 {
            margin-right: 6px;
        }
        & > .col-2 {
            min-width: 8ex;  // needed for the `text-overflow` below to work
            & > .username {
                display: block;
                margin-bottom: 0.3em;
                overflow: hidden;
                text-overflow: ellipsis;
            }
            & > .line-2 {
                align-items: baseline;
                display: flex;
                flex-wrap: wrap;
                & > .amount {
                    margin: 0 6px 0.3em 0;
                }
                & > .actions {
                    margin-left: -6px;
                    & > .btn {
                        margin-left: 6px;
                    }
                }
            }
        }
    }
    small {
        color: $gray-light;
        font-size: $font-size-small;
    }
    & > p:last-child {
        margin-bottom: 0;
    }
}

.link {
    background: transparent;
    border: none;
    color: $link-color;
    padding: 0;
    &:hover {
        color: $link-hover-color;
        text-decoration: $link-hover-decoration;
    }
}

.symbol {
    display: inline-block;
    font-weight: bold;
    text-align: center;
    width: 2ex;
}

.symbol-3ex {
    display: inline-block;
    font-weight: bold;
    text-align: center;
    width: 3ex;
}

code.gray {
    background-color: rgba(27,31,35,.05);
    color: inherit;
}

.payment-instrument {
    line-height: 1.5em;
    margin: 1.5em 0;
    & > span {
        display: inline;
        margin-bottom: 0.5em;
        &:first-child {
            text-align: center;
        }
        &:last-child {
            display: block;
            & > .btn {
                margin: 5px 5px 10px 0;
            }
        }
    }
}

@media (min-width: $screen-sm-min) {
    .payment-instrument {
        align-items: center;
        display: flex;
        margin: 0.5em 0;
        padding-top: 0.5em;
        & + & {
            border-top: 1px dashed #ccc;
        }
        & > span {
            margin: 10px 10px 10px 0;
            &:first-child {
                font-size: 2em;
                width: 1.5em;
            }
            &:last-child {
                margin-right: 0;
                & > .btn {
                    display: block;
                    margin: 0;
                }
                & > .btn + .btn {
                    margin-top: 10px;
                }
            }
        }
    }
}

fieldset#amount {
    max-width: 750px;
}

